# test-task_aelnpx

./: .flake8  .gitignore  Makefile  Procfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: fakedata_workflow.yaml
fakedata/: asgi.py  celery.py  manage.py  settings.py  urls.py  wsgi.py
fakedata/fakedata/: settings.py  urls.py
fakedata/schemas/: admin.py  forms.py  models.py  service.py  urls.py  views.py
fakedata/schemas/migrations/: 0001_initial.py
fakedata/schemas/templatetags/: user_filters.py
fakedata/static/css/: bootstrap.min.css  custom.css
fakedata/templates/: base.html
fakedata/templates/include/: columns_form.html  nav.html
fakedata/templates/registration/: login.html
fakedata/templates/schemas/: configure_schema.html  datasets.html  schemas.html
fakedata/users/: forms.py
fakedata/users/templatetags/: user_filters.py
schemas/: admin.py  forms.py  mixins.py  models.py  service.py  tasks.py  urls.py  views.py
schemas/migrations/: 0002_alter_dataset_csv_file.py
schemas/templatetags/: user_filters.py
templates/: base.html
templates/include/: columns_form.html
templates/misc/: 403.html  404.html  505.html
templates/schemas/: configure_schema.html  datasets.html  new_schema.html  schemas.html
users/: urls.py
