[tool.poetry]
name = "fakedata"
version = "0.1.0"
description = ""
authors = ["Evan Vilagov <evan.vilagov@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2"
python-dotenv = "^0.17.0"
gunicorn = "^20.1.0"
celery = "^5.0.5"
redis = "^3.5.3"
Faker = "^8.0.0"
whitenoise = "^5.2.0"
dj-database-url = "^0.5.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
